<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">EasyShip</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="help_title">Help</string>
    <string name="faq_title">FAQ</string>
    <string name="download_title">Download</string>
    <string name="tip_title">Tip</string>
    <string name="select_btn">Select Rom</string>
    <string name="select_rom">Select Rom</string>
    <string name="select_rom_btn">Select</string>
    <string name="start_btn">Start</string>
    <string name="start_flash_rom">Start flashing ROM</string>
    <string name="main_tips" tools:ignore="TypographyDashes"><![CDATA[Prerequisites for Running the Software：
        <br>1. The device must have root access, and the software permissions should be granted.
		<br>2. Device support : <a href="https://source.android.com/docs/core/ota/virtual_ab">V-AB</a>；
		<br> <br>
		Issues：
		<br>
		1. When selecting the ROM path, be sure to choose from “Local Storage.” Otherwise, you might not be able to select the ROM.
		<br>
		2. Due to Android’s restrictions on background services, try to keep this software as a foreground app during updates (you can move it to the background once the update progress appears in the notification bar).
		<br>
		3. This software supports official ROM upgrades/downgrades. For custom ROMs and near-stock ROMs, users should test them independently.
		<br>
		4. If you receive an update failure prompt, restart your phone and wait for some time before attempting the flashing operation.
		<br>
		5. Feel free to add any other questions or concerns you may have.<a href="mqqapi://card/show_pslcard?src_type=internal&version=1&uin=1009818916&card_type=group&source=qrcode">Here</a>~]]></string>
</resources>